# glide-demo

./: Glide Demo.drawio.xml  README.md  glide demo.postman_collection.json
broker-service/: Dockerfile  pyproject.toml
broker-service/src/broker_service/: __init__.py  __main__.py
broker-service/src/broker_service/routes/: __init__.py  token.py
common-components/: pyproject.toml  setup.cfg
common-components/src/common_components/configurations/: server_config.py  singlethon_basic_config.py
common-components/src/common_components/models/: oauth_enums.py  telecom_dto.py  token.py
common-components/src/common_components/server/: server.py
common-components/src/common_components/server/routes/: abstract_router.py  registry.py
common-components/src/common_components/services/jwt_generator/: jwt_generator.py
common-components/src/common_components/services/jwt_generator/models/: jwt_token.py
common-components/src/common_components/services/redis/: redis.py
common-components/src/common_components/services/secret_manger/: secret_manager.py
common-components/src/common_components/services/telco_directory/: telco_directory.py
common-components/src/common_components/utils/: loaded_wrapper.py  logging_config.py
common-components/src/common_components/utils/consts/: telco.py
common-components/src/common_components/utils/metaclasses/: singlethon.py
common-components/tests/unit/models/: test_telecom_dto.py
common-components/tests/unit/services/telco_directory/: test_longest_prefix_match.py  test_td_data.py
telco-service/: Dockerfile  pyproject.toml
telco-service/src/telco_service/: __init__.py  __main__.py
telco-service/src/telco_service/routes/: __init__.py  jwks.py  tokens_generator.py
telco-service/tests/unit/models/outbound/: test_token.py
(+31 files in other folders)
